2003-03-19  Derek Price  <derek@ximbiot.com>

	* add.c (add_directory): Only call WriteTemplate when the server is
	active.
	* create_adm.c (Create_Admin): Don't call WriteTemplate here since
	Create_Admin is only called from the client.
	* commit.c (commit_dirleaveproc): Don't call WriteTemplate here.  I'm
	a little confused as to why since update_direntproc works for update.c,
	but I can't come up with a test case that fails when this call is
	missing.  Nor can I come up with a test case that passes when this call
	is present and the one in commit_filesdoneproc is removed.
	* sanity.sh (template): Tidy, minimize, and add some extra tests.

2003-03-19  Mark D. Baushke  <mdb@cvshome.org>

	* .cvsignore: Added sanity.config.sh, a new auto-generated file.

	* cvs.h (CVS_PID_ENV): New environment variable CVS_PID has the
	pid of the parent cvs process.
	* main.c (main): Initialize it.
	* sanity.sh (env): Test it.
 
2003-03-19  Derek Price  <derek@ximbiot.com>

	* sanity.config.sh.in: New file.
	* sanity.sh: Source new config file when available.  Accept alternate
	config file as an argument to a -c option.  Accept long options with
	arguments.
	(getlongoptarg): New function.

	* Makefile.in: Regenerated.

2003-03-18  Derek Price  <derek@ximbiot.com>

	* root.c (parse_root): Add some more comments and expand
	#ifdef CLIENT_SUPPORT pragmas.  Rearrange sanity checks slightly.

2003-03-18  Derek Price  <derek@ximbiot.com>

	* main.c (main): Output -R warning in quiet mode and correct spelling
	in this warning message.
	* sanity.sh (commit-readonlyfs-2r4): Correct cascaded spelling mistake
	in test.

2003-03-17  Derek Price  <derek@ximbiot.com>

	* add.c: Correct comment.
	* client.c: Ditto.
	* checkin.c (Checkin): Pass work file name to RCS_checkin so that this
	function works properly in the case insensitive mode.
	* commit.c (checkaddfile): Fix and factor add logic so that the
	correct files and directories are created in the case insensitive mode.